@startuml

class FacilityManager {
    + Long: id
    * String: firstName
    * String: lastName
    * double: salary
}

class Building {
    + Long: id
    * String: typeOfBuilding
    * int: surface
}

class Room {
    + Long: id
    * String: usage;
    * boolean: used
    * int: surface
}

class Repair {
    + Long: id
    * String: typeOfDamage
    * String: description
    * double: fixingTime
}

FacilityManager "1" -- "*" Building : work at >
Building "1" -- "*" Room : has >
Room "1" -- "0..*" Repair : may need >
FacilityManager "1" -- "0..*" Repair : has to >

@enduml